# bocchi

./: Cargo.toml  README.md
examples/: run.rs  train.rs
src/: lib.rs
src/layer/: dense.rs  lstm.rs  mod.rs
