[package]
name          = "bocchi"
version       = "0.0.0"
authors       = ["Hwanhee Kim <kimsvrkimsvr@gmail.com>"]
edition       = "2021"
description   = "Black-box amp simulation engine with neural networks"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bocchi"
readme        = "README.md"
repository    = "https://github.com/kimhappy/bocchi"

[dependencies]
